<resources>
    <string name="app_name">Weather Report</string>

    Api Params
    <string name="weather_units">imperial</string>
    <string name="weather_lang">en</string>
    <string name="map_api_key" translatable="false">AIzaSyCgCoHTV2sMC1qRY3xO8Fs0rrUC8Zshgic</string>
    
    Login Screen
    <string name="login_screen_login_title">Login</string>
    <string name="login_screen_password_title">Password</string>
    <string name="login_screen_sign_in_button">Sign In</string>
    <string name="login_screen_empty_login">Empty Login</string>
    <string name="login_screen_empty_password">Empty Password</string>

    Register Screen
    <string name="register_screen_login_title">Login</string>
    <string name="register_screen_password_title">Password</string>
    <string name="register_screen_password_confirmation_title">Password Confirmation</string>
    <string name="register_screen_register_button">Register</string>
    <string name="register_screen_empty_password">Empty Password</string>
    <string name="register_screen_password_mismatching">Password Mismatching</string>

    Main Screen
    <string-array name="tabs">
        <item>Search</item>
        <item>Cache</item>
        <item>Map</item>
    </string-array>

    Search Screen
    <string name="search_screen_search_button">Search</string>
    <string name="search_screen_connection_error">Error. Check internet connection</string>

    Weather Dialog
    <string name="weather_dialog_temperature_unit">Fahrenheit</string>
    <string name="weather_dialog_clouds_unit">%</string>
    <string name="weather_dialog_clouds_title">Cloudiness</string>
    <string name="weather_dialog_humidity_title">Humidity</string>
</resources>